# call_me_maybe

./: .gitignore  Makefile  README.md  function_calling_tests.json  main.py  output  pyproject.toml
llm_sdk/: __init__.py
src/: __main__.py  extractor.py  parser.py  parsing.py
