[project]
name = "call_me_maybe"
version = "0.1.0"
description = "Ai that returns function and args"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "llm_sdk",
    "accelerate>=1.13.0",
    "mypy>=1.20.0",
]

[tool.uv.workspace]
members = [
    "llm_sdk"
]

[tool.uv.sources]
llm_sdk = { workspace = true }

[tool.flake8]
exclude = [".venv", "llm_sdk", "__pycache__"]
